# stm32u083c-dk

./: Cargo.toml  README.md  build.rs  memory.x  run-tests.sh  rust-toolchain.toml
.cargo/: config.toml
crates/lib/lib-stm32u083c-dk/: Cargo.toml
crates/lib/lib-stm32u083c-dk/src/: lib.rs
crates/lib/lib-stm32u083c-dk/src/drivers/: dedicated_rgb_leds.rs  mod.rs  temp_sensor.rs
crates/lib/lib-stm32u083c-dk/src/macros/: string.rs
crates/lib/lib-stm32u083c-dk/src/tasks/: joystick.rs  temp_sensor.rs
crates/lib/lib-stm32u083c-dk/tests/: add.rs
src/: lib.rs  main.rs
src/communication/: mod.rs
src/drivers/: dedicated_rgb_leds.rs  joystick.rs  lcd.rs  mod.rs  temp_sensor.rs
src/macros/: string.rs
src/tasks/: blink.rs  joystick.rs  lcd.rs  mod.rs  temp_sensor.rs
