[package]
name = "stm32u083c-dk"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-executor = { version = "0.9.1", features = [
  "defmt",
  "arch-cortex-m",
  "executor-thread",
] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-stm32 = { version = "0.5.0", features = [
  "defmt",
  "stm32u083mc",
  "time-driver-any",
] }
fchashmap = "0.1.3"
hash32 = "1.0.0"
hash32-derive = "0.1.1"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }

[package.metadata.embassy]
build = [{ target = "thumbv7em-none-eabi" }]

[lib]
harness = false

[[bin]] # <- add this section
name = "stm32u083c-dk" # src/main.rs
test = false

[[test]]
name = "add"    # tests/add.rs
harness = false


[dev-dependencies]
defmt-test = "0.4"

[profile.dev]
opt-level = 's'
codegen-units = 1

[profile.release]
opt-level = 's'
codegen-units = 1
lto = 'fat'
debug = 2
